--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- seguridad  -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'trusted-scripts.example.com'; style-src 'self' 'trusted-styles.example.com'; img-src 'self' data:; font-src 'self';"> -->
+
     <script src="https://kit.fontawesome.com/489360dac2.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
