--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -43,10 +43,10 @@
                                     <a href='#depilation-fem'>Femenino</a>
                                 </li>
                                 <li>
-                                    <a href='#depilation-zone'>Masculino</a>
+                                    <a href='#depilation-masc'>Masculino</a>
                                 </li>
                                 <li>
-                                    <a href='#depilation-masc'>Zonas</a>
+                                    <a href='#depilation-zone'>Zonas</a>
                                 </li>
                             </ul>
                         </li>
@@ -343,11 +343,19 @@
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1691012250/bohn%20clinica%20estetica1/imgs%20webp/1_wmdlhj.webp" alt="info zonas XS">
+            </div>
+
+            <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1691012246/bohn%20clinica%20estetica1/imgs%20webp/zona_s_il6xwm.webp" alt="Depilacion Laser S">
                 <div class="treatment-buttons">
                     <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
+            <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1691012250/bohn%20clinica%20estetica1/imgs%20webp/2_nbwgzy.webp" alt="info zonas S">
+            </div>
+
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1691012249/bohn%20clinica%20estetica1/imgs%20webp/zona_m_ol7ufx.webp" alt="Depilacion Laser M">
                 <div class="treatment-buttons">
@@ -355,16 +363,27 @@
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1691012243/bohn%20clinica%20estetica1/imgs%20webp/3_xysks4.webp" alt="info zonas M">
+            </div>
+
+            <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1691012248/bohn%20clinica%20estetica1/imgs%20webp/zona_L_qntca0.webp" alt="Depilacion Laser L">
                 <div class="treatment-buttons">
                     <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1691012251/bohn%20clinica%20estetica1/imgs%20webp/4_y2f5k0.webp" alt="info zonas L">
+            </div>
+
+            <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1691012249/bohn%20clinica%20estetica1/imgs%20webp/ZONA_XL_lfixae.webp" alt="Depilacion Laser XL">
                 <div class="treatment-buttons">
                     <a href="" target="_blank">Comprar</a>
                 </div>
+            </div>
+            <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1691012243/bohn%20clinica%20estetica1/imgs%20webp/5_egehvy.webp" alt="info zonas XL">
             </div>
         </div>
     
