--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -109,7 +109,7 @@
     <!-- welcome -->
     <section class="welcome-section">
         <!-- gallery -->
-        <h2 class="line-title">Un poco sobre nosotros</h2>
+        <h2 class="line-title">Te contamos un poco sobre nosotros...</h2>
         <div class="owl-carousel custom-carousel owl-theme">
             <div class="item active" style="background-image: url(./assets/gallery/g12.webp);">
                 <div class="item-desc">
@@ -709,7 +709,7 @@
                 
             } else {
                 // console.log ('volver al tamaño original');
-                header.style.height = '160px';
+                header.style.height = '140px';
                 logo.style.height = '160px';
             }
         });
