added imgs to gallery

--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -113,14 +113,14 @@
         <div class="owl-carousel custom-carousel owl-theme">
             <div class="item active" style="background-image: url(./assets/gallery/g12.webp);">
                 <div class="item-desc">
-                    <h3 class="card-title">Bienvenidos</h3>
-                    <p>Somos Bohn Clínica Estética. Descubre un mundo de belleza, bienestar y cuidado personal en nuestro espacio pensado especialmente para ti.</p>
+                    <h3 class="card-title">¡Bienvenidos!</h3>
+                    <p class="card-text">Somos Bohn Clínica Estética. Descubre un mundo de belleza, bienestar y cuidado personal en nuestro espacio pensado especialmente para ti.</p>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/gallery/g13.webp);">
                 <div class="item-desc">
-                    <h3 class="card-title">Hola!</h3>
-                    <p>Mi nombre es Paula, y junto con nuestro equipo de especialistas te ayudaremos a encontrar tu mejor versión.</p>
+                    <h3 class="card-title">Hola 👋</h3>
+                    <p class="card-text">Mi nombre es Paula, y junto con nuestro equipo de especialistas te ayudaremos a encontrar tu mejor versión.</p>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/gallery/g8.webp);">
@@ -132,7 +132,7 @@
             <div class="item" style="background-image: url(./assets/gallery/g10.webp);">
                 <div class="item-desc">
                     <h3 class="card-title">Nuestros consultorios</h3>
-                    <p>Equipados con la mejor tecnología, ambientados para hacer única tu experiencia.</p>
+                    <p class="card-text">Equipados con la mejor tecnología, ambientados para hacer única tu experiencia.</p>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/gallery/g14.webp);">
@@ -141,28 +141,39 @@
                     <p class="card-text"> La comodidad es parte de tu experiencia. Descubre un espacio diseñado para tu máximo confort durante tus tratamientos.</p>
                 </div>
             </div>
-            <div class="item" style="background-image: url(./assets/gallery/g16.webp);">
-                <div class="item-desc">
-                    <h3 class="card-title">Pensado para ti</h3>
-                </div>
-            </div>
             <div class="item" style="background-image: url(./assets/gallery/g7.webp);">
                 <div class="item-desc">
                     <h3 class="card-title">Vistas increibles</h3>
-                    <p>Disfruta de una excelente vista mientras te relajas.</p>
+                    <p class="card-text">Disfruta de una excelente vista mientras te relajas.</p>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/gallery/g1.webp);">
                 <div class="item-desc">
-                    <h3 class="card-title">Un hermoso otoño</h3>
+                    <h3 class="card-title">Un hermoso otoño🍂</h3>
                 </div>
             </div>
-            <div class="item" style="background-image: url();">
+            <div class="item" style="background-image: url(./assets/gallery/espacios1.webp);">
                 <div class="item-desc">
-                    <h3 class="card-title">¡Compartamos un café!</h3>
+                    <h3 class="card-title">Compartimos un café☕</h3>
                     <p class="card-text"> Disfruta tu tratamientos y relájate en nuestro acogedor rincón de café y té. Tu bienestar es nuestra prioridad.</p>
                 </div>
             </div>    
+            <div class="item" style="background-image: url(./assets/gallery/espacios4.webp);">
+                <div class="item-desc">
+                    <h3 class="card-title">o un té!</h3>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(./assets/gallery/espacios5.webp);">
+                <div class="item-desc">
+                    <h3 class="card-title">Espacios únicos</h3>
+                    <p class="card-text">Estamos en cada detalle.</p>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(./assets/gallery/g16.webp);">
+                <div class="item-desc">
+                    <h3 class="card-title">¡Te esperamos!</h3>
+                </div>
+            </div>
         </div> 
     </section>
 
