--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bohn Clínica Estética, descubre tu mejor versión">
     <meta http-equiv="Cache-Control" content="max-age=3600, must-revalidate">
     <!-- seguridad -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'trusted-scripts.example.com'; style-src 'self' 'trusted-styles.example.com'; img-src 'self' data:; font-src 'self';"> -->
