--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -192,25 +192,25 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (19).webp" alt="Anticelulitico">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96345" target="_blank">Comprar</a>
+                  <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (33).webp" alt="Grasa Localizada">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96349" target="_blank">Comprar</a>
+                  <a href="" target="_blank">Comprar</a>
                 </div>
             </div>          
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (48).webp" alt="Post Parto">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96370" target="_blank">Comprar</a>
+                  <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (34).webp" alt="Hifu Corporal">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96358" target="_blank">Comprar</a>
+                  <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
         </div>
@@ -225,37 +225,37 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (50).webp" alt="Rejuvenecimiento Facial">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/110611?fbclid=PAAaZjAPNEL_HS18hvLY5YhQvFWwkcmlvf7Iba-1eriwtnSEPAoFPKdW9-0p8" target="_blank">Comprar</a>
+                  <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (35).webp" alt="Hifu Facial Completo">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96360" target="_blank">Comprar</a>
+                  <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (37).webp" alt="Limpieza Facial Profunda">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96362" target="_blank">Comprar (1 sesión)</a>
+                  <a href="" target="_blank">Comprar (1 sesión)</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (40).webp" alt="Microneedling">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96365" target="_blank">Comprar</a>
+                  <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (36).webp" alt="Hollywood Peeling">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96368" target="_blank">Comprar</a>
+                  <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (47).webp" alt="Peeling Quimico">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96369" target="_blank">Comprar</a>
+                  <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
         </div>
@@ -271,13 +271,13 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (22).webp" alt="Depilacion Laser Pack Base">
                 <div class="treatment-buttons">
-                    <a href="https://www.webpay.cl/form-pay/95587 " target="_blank">Comprar</a>
+                    <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (23).webp" alt="Depilacion Laser Pack Plus">
                 <div class="treatment-buttons">
-                    <a href="https://www.webpay.cl/form-pay/105030" target="_blank">Comprar</a>
+                    <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
@@ -426,10 +426,10 @@
                 <img src="./assets/treatments/imgs (41).webp" alt="Nutrición">
                 </div>
                 <div class="treatment-buttons-two">
-                  <a href="https://www.webpay.cl/form-pay/105035" target="_blank">Comprar Consulta de Control</a>
+                  <a href="" target="_blank">Comprar Consulta de Control</a>
                 </div>
                 <div class="treatment-buttons"> 
-                  <a href="https://www.webpay.cl/form-pay/105033" target="_blank">Comprar Primera Consulta</a> 
+                  <a href="" target="_blank">Comprar Primera Consulta</a> 
                 </div>
             </div>
         </div>
@@ -444,19 +444,19 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (39).webp" alt="Masajes Descontracturantes">
                 <div class="treatment-buttons-two">
-                  <a href="https://www.webpay.cl/form-pay/94143" target="_blank">Comprar Pack 2 Sesiones</a>
+                  <a href="" target="_blank">Comprar Pack 2 Sesiones</a>
                 </div>
                 <div class="treatment-buttons"> 
-                  <a href="https://www.webpay.cl/form-pay/94139" target="_blank">Comprar 1 sesión</a>
+                  <a href="" target="_blank">Comprar 1 sesión</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (38).webp" alt="Masajes Relajantes">
                 <div class="treatment-buttons-two">
-                  <a href="https://www.webpay.cl/form-pay/94141" target="_blank">Comprar Pack 2 Sesiones</a>
+                  <a href="" target="_blank">Comprar Pack 2 Sesiones</a>
                 </div>
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/94137" target="_blank">Comprar 1 sesión</a> 
+                  <a href="" target="_blank">Comprar 1 sesión</a> 
                 </div>
             </div>
         </div>
@@ -471,13 +471,13 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (43).webp" alt="Pack Novia Base">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/106552" target="_blank">Comprar</a>
+                  <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (44).webp" alt="Pack Novia Plus">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/106553" target="_blank">Comprar</a>
+                  <a href="" target="_blank">Comprar</a>
                 </div>
             </div>
         </div>
@@ -511,7 +511,7 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (27).webp" alt="Gift Card 50000">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/106568" target="_blank">Comprar Gift Card precio $30.000 (canjeable por una limpieza facial profunda o una sesión de masajes relajantes/descontracturantes o $50.000 de bono para otros tratamientos)</a>
+                  <a href="" target="_blank">Comprar Gift Card precio $30.000 (canjeable por una limpieza facial profunda o una sesión de masajes relajantes/descontracturantes o $50.000 de bono para otros tratamientos)</a>
                 </div>
             </div>
         </div>
